--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Página 2</title>
+</head>
+<body>
+  <h1>Página 2</h1>
+  <p>Está é a primeira página</p>
+  <a href="index.html">Voltar para a Página 1</a>
+</body>
+</html>
