--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <body>
   <h1>Página 2</h1>
   <p>Está é a primeira página</p>
-  <a href="pagina2.html">Voltar para a Página 1</a>
+  <a href="pagina2.html">Ir para a Página 2</a>
 </body>
 </html>
