--- a/pagina 2.html
+++ b/pagina 2.html
@@ -6,6 +6,6 @@
 <body>
   <h1>Página 2</h1>
   <p>Está é a segunda página</p>
-  <a href="index.html">Voltar para a Página 1</a>
+  <a href="index.html">Voltar para pagina 1</a>
 </body>
 </html>
